Bug 60444 - transparent form Controls disappear when selecting
Summary: transparent form Controls disappear when selecting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.2.0 target:4.1.0.2 target:4.0.5
Keywords: regression
: 60569 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-07 21:17 UTC by bawlaw
Modified: 2013-06-27 19:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (143.38 KB, image/jpeg)
2013-02-07 21:17 UTC, bawlaw
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bawlaw 2013-02-07 21:17:13 UTC
Created attachment 74380 [details]
screenshot

/// Similar to bug 51420

Problem description: 
Some Form Control's disapears when selecting near cell

Steps to reproduce:
1. Draw the form (checkbox, option button, group box);
2. toggle design-mode off;
3. select a cell near to the form.

Current behavior:
the Form tools disapear. Appear again when you scroll to the next row/column

Expected behavior:
..should'nt disapear

* Apparently only check-box, Option Button, Label Field, Group box, Image control and image button are affected.
Comment 1 Jorendc 2013-02-07 22:33:14 UTC
Thanks for reporting!
I can reproduce this behavior using Linux Mint 14 x64 and LibreOffice 4.0.0.3 release.
Comment 2 Michael Stahl 2013-06-24 18:23:48 UTC
this is a regression in LO 4.0 beta 2, from this commit:

commit 6c98ad71478cb72b51634b32d6e553ccaec30190
Author:     Michael Meeks <michael.meeks@suse.com>

    fdo#58029 - substantially accelerate re-rendering of complex forms

... which removed the crucial Update() call on the child windows.

the problem also affects Writer (but there is masked by another
form control painting bug, fdo#43765)

fixed on master
Comment 3 Michael Stahl 2013-06-24 18:28:03 UTC
*** Bug 60569 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2013-06-24 18:29:44 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f022f39638fbe970f1b839c757dcccd3baa69445

fdo#60444: Revert "fdo#58029 - substantially accelerate re-rendering..."



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-06-25 17:20:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d7e10cc71cd40ad84294f992f5d7e3c7c915e305&h=libreoffice-4-1

fdo#60444: Revert "fdo#58029 - substantially accelerate re-rendering..."


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-06-27 19:23:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=435be554c5025f2309c016170d5225ac086c727b&h=libreoffice-4-0

fdo#60444: Revert "fdo#58029 - substantially accelerate re-rendering..."


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.