fdo#60444: Revert "fdo#58029 - substantially accelerate re-rendering..."

This reverts commit 6c98ad71478cb72b51634b32d6e553ccaec30190.

This breaks selection of transparent form controls (fdo#60444), because
the Update method is not called on the children.

Change-Id: Id0b6a34a15aa1ed7bd5aa0d7b5626e60bee57e30